--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-lottie": "^1.2.5",
     "@types/react-router-dom": "^5.1.7",
     "add": "^2.0.6",
     "bootstrap": "4.6.0",
