--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.1.7",
     "add": "^2.0.6",
     "bootstrap": "4.6.0",
+    "ipfs-http-client": "^50.1.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
