--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@types/react-router-dom": "^5.1.7",
     "add": "^2.0.6",
     "bootstrap": "4.6.0",
+    "firebase": "^8.6.7",
+    "firebase-tools": "^9.12.1",
+    "global": "^4.4.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
