--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-lottie": "^1.2.5",
     "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.10",
     "add": "^2.0.6",
     "async-await-error-handling": "^0.5.2",
     "bootstrap": "4.6.0",
@@ -26,6 +27,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sha1": "^1.1.1",
+    "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.10"
