--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-file-icon": "^1.0.1",
     "@types/react-lottie": "^1.2.5",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.10",
@@ -25,6 +26,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-file-icon": "^1.0.0",
     "react-icons": "^4.2.0",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^5.2.0",
